# autotrader

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
src/trader_app/: __init__.py  cli.py  config.py  models.py
src/trader_app/alerts/: notifier.py
src/trader_app/analytics/: performance.py
src/trader_app/broker/: alpaca.py  base.py
src/trader_app/data/: market_data.py
src/trader_app/execution/: __init__.py  engine.py  portfolio.py
src/trader_app/risk/: __init__.py  manager.py
src/trader_app/strategy/: __init__.py  adaptive_ensemble.py  base.py  indicators.py  mean_reversion.py  momentum.py
src/trader_app/utils/: sqlite_journal.py  trade_journal.py
tests/: test_adaptive_strategy.py  test_analytics_summary.py  test_portfolio_allocator.py  test_risk_manager.py  test_strategy_signal.py
