[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autotrader"
version = "0.1.0"
description = "Real broker trading scaffold with risk controls"
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "Project Owner" }]
dependencies = [
  "requests>=2.31.0",
  "python-dotenv>=1.0.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]

[project.scripts]
trader-cli = "trader_app.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
